apps/draw.io/draw.io-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: draw-io
  labels:
    app: draw-io
    env: prod
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: draw-io
      env: prod
  template:
    metadata:
      name: draw-io
      labels:
        app: draw-io
        env: prod
    spec:
      containers:
        - name: draw-io
          image: fjudith/draw.io
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: https
              containerPort: 8443
              protocol: TCP
          livenessProbe:
            timeoutSeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
          readinessProbe:
            timeoutSeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
---
apiVersion: v1
kind: Service
metadata:
  name: draw-io
  labels:
    app: draw-io
    env: prod
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: https
      port: 8443
      protocol: TCP
      targetPort: 8443
  selector:
    app: draw-io
    env: prod
